final corrections, future work and acronyms. Just missing final read now

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,6 +1,6 @@
 @article{lava1998,
     author = {Bjesse, Per and Claessen, Koen and Sheeran, Mary and Singh, Satnam},
-    title = {Lava: hardware design in Haskell},
+    title = {{L}ava: hardware design in {H}askell},
     journal = {SIGPLAN Not.},
     issue_date = {Jan. 1999},
     volume = {34},
@@ -19,16 +19,16 @@
 
 @inproceedings{xilinx-lava,
     author={Singh, S.},
-    booktitle={VLSI Design, 2004. Proceedings. 17th International Conference on},
-    title={Designing reconfigurable systems in Lava},
+    booktitle={{VLSI} Design, 2004. Proceedings. 17th International Conference on},
+    title={Designing reconfigurable systems in {L}ava},
     year={2004},
     pages={299-306},
     doi={10.1109/ICVD.2004.1260941},
 }
 
 @article{reduceron,
-    author={NAYLOR,MATTHEW and RUNCIMAN,COLIN},
-    title={The Reduceron reconfigured and re-evaluated},
+    author={Naylor, Matthew and Runciman, Colin},
+    title={The {R}educeron reconfigured and re-evaluated},
     journal={Journal of Functional Programming},
     volume={22},
     issue={Special Issue 4-5},
@@ -73,14 +73,14 @@
 }
 
 @misc{website:forsyde-hackage,
-    title={Hackage page for the ForSyDe library},
+    title={{H}ackage page for the {ForSyDe} library},
     month={November},
     year={2013},
     howpublished={\url{http://hackage.haskell.org/package/ForSyDe}},
 }
 
 @incollection{coquet2011,
-    title={Coquet: a Coq library for verifying hardware},
+    title={Coquet: a {C}oq library for verifying hardware},
     author={Braibant, Thomas},
     booktitle={Certified Programs and Proofs},
     pages={330--345},
@@ -89,8 +89,8 @@
 }
 
 @book{nand2tetris-book,
-    title={The Elements of Computing Systems: building a modern computer from first principles},
-    author={Noam Nisan, Shimon Shocken},
+    title={The {E}lements of {C}omputing {S}ystems: {B}uilding a modern computer from first principles},
+    author={Noam Nisan and Shimon Shocken},
     year={2012},
     edition={3rd},
     publisher={MIT Press},
@@ -107,8 +107,15 @@
 }
 
 @misc{website:ghc-typenats,
-    title={Type-level naturals in GHC},
+    title={Type-level naturals in {GHC}},
     month={November},
     year={2013},
     howpublished={\url{https://ghc.haskell.org/trac/ghc/wiki/TypeNats}},
+}
+
+@article{braibant2013formal,
+  title={Formal verification of hardware synthesis},
+  author={Braibant, Thomas and Chlipala, Adam},
+  journal={arXiv preprint arXiv:1301.4779},
+  year={2013}
 }
