--- a/report/report.tex
+++ b/report/report.tex
@@ -65,14 +65,11 @@
     \maketitle
 
     \input{section1-introduction.tex}
-
     \input{section2-methodology.tex}
-
     \input{section3-modeled-circuits.tex}
-
     \input{section4-edsls.tex}
-
     \input{section5-conclusions.tex}
+    \input{section6-future-work.tex}
 
     \newpage
     \bibliographystyle{plain}
