--- a/report/section1-introduction.tex
+++ b/report/section1-introduction.tex
@@ -6,25 +6,25 @@
     be incorporated earlier and earlier in the design process. This breaks modularity and makes it
     harder to validate and verify the correctness of circuits.
 
-    In this context, researchers have been suggesting (since the 1980s) the usage of functional
-    programming languages to model circuits. One particular line of research is to create Embedded
-    Domain-Specific Languages for hardware description based on existing functional programming
-    languages, such as Haskell.
+    \acrodef{EDSL}{Embedded Domain-Specific Languages} In this context, researchers have been
+    suggesting (since the 1980s) the usage of functional programming languages to model circuits.
+    One particular line of research is to create \acp{EDSL} for hardware description based on
+    existing functional programming languages, such as Haskell.
 
-    There are a multitude of EDSLs for hardware description, but they vary wildly on a number of
-    aspects: host language, level of abstraction, capabilities of simulation, formal verification,
-    synthesis (generation of netlists) and integration with other tools, to name a few. All this
-    variety can make the task of choosing a hardware EDSL for the task at hand daunting and
-    time-consuming.
+    There are a multitude of \acp{EDSL} for hardware description, but they vary wildly on a number
+    of aspects: host language, level of abstraction, capabilities of simulation, formal
+    verification, synthesis (generation of netlists) and integration with other tools, to name a
+    few. All this variety can make the task of choosing a hardware EDSL for the task at hand
+    daunting and time-consuming.
 
     The main goal of this experimentation project is to establish some order in this landscape, and
-    to perform a practical analysis of some popular functional hardware EDSLs. By reading the
+    to perform a practical analysis of some popular functional hardware \acp{EDSL}. By reading the
     materials produced in this project (circuit models, test cases, generated netlists, report), a
-    hardware designer wishing to use a functional hardware EDSL for his next design should gain some
-    insight about the strengths and weaknesses of each language and have an easier time choosing
-    one.
+    hardware designer wishing to use a functional hardware \ac{EDSL} for his next design should gain
+    some insight about the strengths and weaknesses of each language and have an easier time
+    choosing one.
 
     As an additional result of this research, we intend to identify recent, cutting-edge
-    developments in the Haskell language and its implementations from which the analyzed EDSLs could
-    benefit. Also, we intend to discuss to which extent some shortcomings of the EDSLs could be
-    overcome by having them hosted in a dependently-typed language.
+    developments in the Haskell language and its implementations from which the analyzed \acp{EDSL}
+    could benefit. Also, we intend to discuss to which extent some shortcomings of the \acp{EDSL}
+    could be overcome by having them hosted in a dependently-typed language.
