--- a/report/section5-conclusions.tex
+++ b/report/section5-conclusions.tex
@@ -2,30 +2,30 @@
 \label{sec:conclusions}
 
     The models and test cases that we developed, along with the verification we performed, gave us
-    a better understanding of how the hardware EDSLs Lava, ForSyDe and Coquet compare to each other
+    a better understanding of how the hardware \acp{EDSL} Lava, ForSyDe and Coquet compare to each other
     \emph{from the point of view of a hardware designer}. This practical experience, combined with
-    knowledge of the ``inner workings'' of each EDSL and their host language, allowed for an
+    knowledge of the ``inner workings'' of each \ac{EDSL} and their host language, allowed for an
     informed discussion of each language's strong points and weaknesses. The most significant
     findings of this practical evaluation, categorized by evaluated aspect, are summarized here.
 
     \paragraph{Depth of embedding}
-        None of the three evaluated EDSLs lie at the \emph{extremes} of embedding depth. Lava can be
+        None of the three evaluated \acp{EDSL} lie at the \emph{extremes} of embedding depth. Lava can be
         said to be \emph{deeply embedded}, however, its \texttt{Signal} datatype collaborates with
         the host language runtime so that \emph{cyclic structures} in circuits can be modeled as
         \emph{recursion in the host language}. ForSyDe has \emph{both} deep and shallow modeling
         capabilities, even though we only studied the deep model. In fact, ForSyDe's hackage
         page\cite{website:forsyde-hackage} promises a future version in which deep and shallow
         modeling constructs will be in different packages. Coquet has the ``deepest'' modeling of
-        all studied EDSLs, and \emph{avoids} the issue of \emph{observable sharing} by not allowing
+        all studied \acp{EDSL}, and \emph{avoids} the issue of \emph{observable sharing} by not allowing
         variable binding constructs, and having circuits connect to each other only through
         combinators.
 
     \paragraph{Simulation}
-        Simulation can be performed in all studied EDSLs. In Lava, \emph{automated} test cases (in
+        Simulation can be performed in all studied \acp{EDSL}. In Lava, \emph{automated} test cases (in
         which the simulation output is compared with an \emph{expected} combination) are not
         possible due to the way in which the observable sharing issue is handled. Coquet has
         simulation built into the library as one of several \emph{example interpretations} for
-        circuits, and it works just as well as in the other EDSLs, with the only shortcoming that
+        circuits, and it works just as well as in the other \acp{EDSL}, with the only shortcoming that
         the simulation of \emph{sequential} circuits is currently \emph{not possible}.
 
     \paragraph{Verification}
@@ -35,16 +35,16 @@
         into a CNF (\emph{conjunctive normal form}) logical formula which is fed into a
         satisfiability solver. Coquet takes a different approach and offers some tools to help the
         user perform \emph{interactive theorem proving} for circuit correctness. One can say that
-        Coquet does \emph{more than verification}, as it's capable of proving \emph{general}
-        properties of parametric circuits, for all possible values of the parameters.
+        Coquet does \emph{more than verification}, as with Coquet we can prove the correctness of
+        whole families of parameterized circuits by induction.
 
     \paragraph{Genericity}
         In Lava the modeling of generic circuits is made very easy, and any parameter to a circuit
-        definition which is not pf type \texttt{Signal T} is considered a \emph{parameter} instead
+        definition which is not of type \texttt{Signal T} is considered a \emph{parameter} instead
         of a circuit input, and specific instances of these generic circuits can then be simulated
         or synthesized. In Coquet a similar approach is taking, allowing the user to prove \emph{by
         induction on the parameter} the correctness of the whole family of circuits being defined.
-        ForSyDe is the EDSL with the least opportunity for generalization: the only thing we can do
+        ForSyDe is the \ac{EDSL} with the least opportunity for generalization: the only thing we can do
         is to have fixed-length bit vectors or fixed-size integers as inputs, and these are fixed at
         \emph{Haskell compilation time}.
 
@@ -53,11 +53,12 @@
         also generate CNF formulas for a SAT solver. ForSyDe can output its circuits in VHDL and
         also generate \emph{graph files}, which can be formatted and used for circuit visualization.
         Coquet is disadvantaged when it comes to tool integration: it currently has no support for
-        exporting circuits in some industry-standard format, even though it \emph{could in theory}
-        be done by traversing the models.
+        exporting circuits in some industry-standard format, even though one of the examples in the
+        distribution is a gate-count, so netlist generation should be possible in the same
+        framework.
 
     \paragraph{Extensibility}
-        ForSyDe and Coquet offer both good capabilities for extensibility: in both EDSLs the
+        ForSyDe and Coquet offer both good capabilities for extensibility: in both \acp{EDSL} the
         designer can make circuits operate over user-defined types. The big advantage of ForSyDe is
         its usage of Template Haskell and GHC's \emph{deriving} mechanism to generate VHDL
         corresponding to the user-defined types. Lava offers little to no extensibility, and only
